syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "InstaRent.Catalog.Grpc";

package CatalogApi;

service BagPublic {
	rpc GetById(BagRequest) returns (BagResponse);
}

message BagRequest {
	string id = 1;
}

message BagResponse {
	string id = 1;
	string description = 2;
	string bag_name = 3;
	repeated string image_urls = 4;
	google.protobuf.Timestamp rental_start_date = 5;
	google.protobuf.Timestamp rental_end_date = 6;
	double price =7;
	repeated string tags = 8;
	string status = 9;
	string renter_id = 10;
}